fixed mobile styling not showing up on screen

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -31,7 +31,7 @@ body.active-modal {
     
 
     
-    gap: 15rem;
+    gap: 20rem;
     
     margin: 1rem;
 
@@ -80,7 +80,7 @@ body.active-modal {
 display: flex;
 justify-content: end;
 padding-right: 1rem;
-padding-top: 20rem;
+padding-top: 35rem;
 
 }
 
